# geo-imaging

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 01-concepts.md  02-tutorial.md  03-advanced-usage.md  04-output-guide.md  05-architecture.md  06-developer-guide.md  07-troubleshooting.md
scripts/: export_voxel.py  report.py  visualize_section.py  visualize_voxel.py
src/gempygen/: __init__.py  builder.py  engine.py  exceptions.py  exporters.py  orientation.py  schemas.py
tests/: test_builder.py  test_exporters.py  test_orientation.py  test_schemas.py
