[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gempygen"
dynamic = ["version"]
description = "Geological Modeling SDK powered by GemPy"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "gempy>=2025.2.0",
    "gempy-engine>=2025.2.0",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.8",
    "pyvista>=0.47.1",
    "gempy-viewer>=2025.1.6",
]
section = [
    "scipy>=1.11",
    "scikit-image>=0.21",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/Metabizdesign-git/geo-imaging"
Repository = "https://github.com/Metabizdesign-git/geo-imaging"

[tool.setuptools.dynamic]
version = {attr = "gempygen._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["gempy.*", "gempy_engine.*", "skimage.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["gempygen"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
