[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gempygen"
dynamic = ["version"]
description = "Geological Modeling SDK powered by GemPy"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "gempy>=2025.2.0",
    "gempy-engine>=2025.2.0",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.8",
    "pyvista>=0.47.1",
    "gempy-viewer>=2025.1.6",
]
section = [
    "scipy>=1.11",
    "scikit-image>=0.21",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/Metabizdesign-git/geo-imaging"
Repository = "https://github.com/Metabizdesign-git/geo-imaging"

[tool.setuptools.dynamic]
version = {attr = "gempygen._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
